# the-commerce-guild-assistant

./: .gitignore  CLAUDE.md  LICENSE  Modelfile  README.md  pyproject.toml
scripts/: copy_to_silver.py  diagnose_wiki.py  drop_collection.py  preview_model_routing.py  run_chat.py  run_embedder.py  run_golden_dataset.py  run_question_generator.py  run_question_tagger.py  run_retrieval_eval.py  run_scraper.py  run_section_breaker.py  run_summarizer.py  run_testset_generator.py  run_web.py
src/guild_assistant/rag/: context_builder.py  pipeline.py  reranker.py  retriever.py
src/guild_assistant/rag_setup/: embedder.py  question_generator.py  question_tagger.py  section_breaker.py  summarizer.py
src/guild_assistant/rag_test/: golden_dataset.py  testset_generator.py
src/guild_assistant/scraper/: discoverer.py  worker.py
src/guild_assistant/utils/: model_adapter.py  page_classifier.py  router.py
src/guild_assistant_web/: app.py  chainlit.md  pipeline_factory.py
tests/: test_chainlit_app.py  test_context_builder.py  test_discoverer.py  test_embedder.py  test_golden_dataset.py  test_metrics.py  test_model_adapter.py  test_page_classifier.py  test_pipeline.py  test_pipeline_factory.py  test_question_generator.py  test_question_tagger.py  test_reranker.py  test_retrieval_evaluator.py  test_retriever.py  test_router.py  test_section_breaker.py  test_summarizer.py  test_testset_generator.py  test_testset_loader.py  test_worker.py
tests/benchmark/: metrics.py  retrieval_evaluator.py  testset_loader.py
